<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webSocketEchoService"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/echoServiceAddressEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/webSocketEchoServiceAddress" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textMessage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/echoRequestMessageEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/sendEchoRequestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendEchoRequest" />

    <TextView
        android:id="@+id/echoResponseMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>